4. DbContext + Connection string

--- a/FirstApp/appsettings.Development.json
+++ b/FirstApp/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionsStrings": {
+  "ConnectionStrings": {
     "DefaultConnection": "Data source=testshop.db"
   }
 }
